--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav id="navbar">
     <div class="max-container">
-      <div class="logo_img"><img src="./Img/CaseClosed3 logo.png" alt="CaseClosedlogo"></div>
+      <div class="logo_img"><a href="./index.html"><img src="./Img/CaseClosed3 logo.png" alt="CaseClosedlogo"></a> </div>
       <ul class="nav_links">
         <li class="selected"><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -169,12 +169,12 @@
         </div>
         <div class="social-media">
           <div class="sm-logos">
-            <div><img src="./Img/13Linkedin.png" alt="Linkedin"></div>
-            <div><img src="./Img/14facebook.png" alt="14facebook"></div>
-            <div><img src="./Img/15insatgarm.png" alt="15insatgarm"></div>
-            <div><img src="./Img/16watsapp.png" alt="16watsapp"></div>
-            <div><img src="./Img/17twitter.png" alt="17twitter"></div>
-            <div><img src="./Img/18youtube.png" alt="18youtube"></div>
+            <div><a href="#"><img src="./Img/13Linkedin.png" alt="Linkedin"></a></div>
+            <div><a href="#"><img src="./Img/14facebook.png" alt="14facebook"></a></div>
+            <div> <a href="#"><img src="./Img/15insatgarm.png" alt="15insatgarm"></a></div>
+            <div> <a href="#"><img src="./Img/16watsapp.png" alt="16watsapp"></a></div>
+            <div> <a href="#"><img src="./Img/17twitter.png" alt="17twitter"></a></div>
+            <div> <a href="#"><img src="./Img/18youtube.png" alt="18youtube"></a></div>
           </div>
         </div>
 
